Changed image name

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,3 +20,4 @@ jobs:
           humanitec-token: ${{ secrets.HUMANITEC_TOKEN }}
           organization: internaldeveloperplatform
           additional-docker-arguments: --build-arg env=production
+          image-name: public-site-caws
