--- a/.github/workflows/staging.yml
+++ b/.github/workflows/staging.yml
@@ -20,3 +20,4 @@ jobs:
           humanitec-token: ${{ secrets.HUMANITEC_TOKEN }}
           organization: internaldeveloperplatform
           additional-docker-arguments: --build-arg env=staging
+          image-name: public-site-caws
